<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.home.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/top_card"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewInternetSpeedText"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/textview_internet_speed"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/slatelight"
                    app:layout_constraintBottom_toTopOf="@id/textViewWifi"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewWifi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/textview_wifi"
                    app:layout_constraintBottom_toTopOf="@id/textViewTodayUpload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewInternetSpeedText" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTodayUpload"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/textview_today_data_sent"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/textViewMobile"
                    app:layout_constraintEnd_toStartOf="@id/textViewTodayDownload"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewWifi" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTodayDownload"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/textview_today_data_receive"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/textViewMobile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textViewTodayUpload"
                    app:layout_constraintTop_toBottomOf="@id/textViewWifi" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewMobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/textview_mobile"
                    app:layout_constraintBottom_toTopOf="@id/textViewTodayMobileDownload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewTodayUpload" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTodayMobileUpload"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/textview_today_data_sent"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textViewTodayDownload"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewMobile" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTodayMobileDownload"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/textview_today_data_receive"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/textViewTodayUpload"
                    app:layout_constraintTop_toBottomOf="@id/textViewMobile" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_card"
            tools:listitem="@layout/item_internet" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>